[Update 2018-06-12]
- Removed extra comma in Eden Group Huuma Shuriken I that currently breaks the page [Slap]
- Added items [Slap]:
	Tanigumi Girl Doll
	King Tiger Doll Hat
	Drooping Bunny
	Blue Tiger Mask
	Red Tiger Mask
- Issue #173: Fixed Luna Kaleet; [Kato]
- Issue #172: Fixed some descriptions and other were OK; [Kato]
- Issue #171: Added the ItemIDs, also added from 1527 to 1661; [Kato]
- Issue #170: Added Party Member Hat ; [Kato]
- Fixed potion success rate in etc.js [Slap]
- Added items 501-600 to ItemID [Slap]
- Clarified rental item names (Ballista R -> Ballista [Rental]) [Slap]
- Issue #149: Proofreading [Slap]
	Renown Detective's Cap: name (Renown Detective Cap -> Renown Detective's Cap)
	Banana Hat: autospell level (1 -> 3)
	Zherlthsh Mask: name (Zealotus Mask -> Zherlthsh Mask)
	Novice Guard: weight (1 -> 0.1)
	Novice Shield: required lvl (30 -> 40)
	Somber Novice Hood: weight (1 -> 0.1)
	Novice Slippers: weight (1 -> 0.1)
	Tattered Novice Ninja Suit: weight (1 -> 0.1)
	Luna Bow: updated description
	Heavenly Maiden Robe: name (Heavenly Maiden's Robe -> Heavenly Maiden Robe)
	Helm of Darkness: updated description
	Maiden's Twin Ribbon: effect (removed 76,5)
	Nest Hat: name (Bird's Nest Hat -> Nest Hat)
	Improved Arm Guard: name (Advanced Arm Guard -> Improved Arm Guard)
	Jitte:
		updated description
		effect (added 140,2)
	Hakujin: fixed effects
	Gokurin: updated description/effects
	Huuma Giant Wheel Shuriken:
		updated description/effects
		effect (added 194,1)
	Huuma Blaze Shuriken: effect (added 194,1)
	Huuma Wing Shuriken: effect (added 194,1)
	Branch: effect (removed 8,10)
	Gate Keeper: required lvl (55 -> 24)
	Destroyer: effect (added 141,2)
	Note Headphones:
		updated description
		required lvl (10 -> 0)
	Wandering Minstrel Hat:
		name (Legendary Minstrel Hat -> Wandering Minstrel Hat)
		type (999 -> 50)