@@ -828,7 +828,7 @@ if(Taijin==0){
 
 MonMap = [
 [0], //All Regions
-[622,620,621,619,"N"],// Seals
+[623,624,625,627,628,629,622,626,630,620,621,619,"N"],// Seals
 [631,632,633,634,635,636,637,638,639,640,641,642,643,644,645,"N"],//GMC
 [265,298,401,402,405,406,407,408,409,410,411,412,"N"],//Abyss Lake Dungeon
 [21,53,61,70,73,74,124,140,239,241,271,274,299,"N"],//Amatsu
